--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "d3": "^6.3.1",
+    "tailwindcss": "^1.9.5",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -18,6 +20,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "postcss": "^8.2.4",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
